# fall-detection-rv1126

./: CMake.py  CMakeLists.txt  convert.py  cpu_infer.py  dataset.yaml  export.py  fix_reshape.py  fix_resize.py  force_change_opset.py  gen_calib.py  main.cc  postprocess.cc  postprocess.h  re_export.py  rknn_back.py  train.py  yolov8.cc  yolov8.h
